--- a/index.html
+++ b/index.html
@@ -1,20 +1,182 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>OK</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Exchange Simulator</title>
+
+<script src="https://cdn.jsdelivr.net/npm/lightweight-charts@4.1.1/dist/lightweight-charts.standalone.production.js"></script>
+
 <style>
 body {
-  background: black;
-  color: lime;
-  font-size: 28px;
+  margin: 0;
+  background: #0b0e11;
+  color: #eaecef;
+  font-family: Arial, sans-serif;
+}
+#chart {
+  width: 100%;
+  height: 420px;
+}
+#controls {
+  display: flex;
+  gap: 8px;
+  padding: 10px;
+  background: #0e1117;
+}
+input {
+  width: 120px;
+  padding: 6px;
+  background: #161a1e;
+  color: #eaecef;
+  border: 1px solid #2b3139;
+}
+button {
+  padding: 6px 14px;
+  font-weight: bold;
+  border: none;
+}
+.buy { background: #0ecb81; }
+.sell { background: #f6465d; }
+#stats {
+  padding: 10px;
 }
 </style>
 </head>
+
 <body>
 
-<h1>OK INDEX.HTML</h1>
-<p>GitHub Pages теперь видит файл</p>
+<div id="chart"></div>
+
+<div id="controls">
+  <input id="amount" type="number" value="1000">
+  <button class="buy" onclick="trade('BUY')">BUY</button>
+  <button class="sell" onclick="trade('SELL')">SELL</button>
+</div>
+
+<div id="stats">
+  USD: <span id="usd"></span> |
+  BTC: <span id="btc"></span> |
+  Price: <span id="price"></span>
+</div>
+
+<script>
+const TIMEFRAME = 1000;
+const LIQUIDITY = 1_000_000;
+
+let balanceUSD = 100000;
+let balanceBTC = 0;
+let price = 30000;
+
+let currentCandle = null;
+let lastCandleTime = null;
+
+const usdEl = document.getElementById('usd');
+const btcEl = document.getElementById('btc');
+const priceEl = document.getElementById('price');
+
+function updateUI() {
+  usdEl.textContent = balanceUSD.toFixed(2);
+  btcEl.textContent = balanceBTC.toFixed(6);
+  priceEl.textContent = price.toFixed(2);
+}
+updateUI();
+
+const chart = LightweightCharts.createChart(
+  document.getElementById('chart'),
+  {
+    background: { color: '#0b0e11' },
+    textColor: '#d1d4dc',
+    grid: {
+      vertLines: { color: '#1e2329' },
+      horzLines: { color: '#1e2329' }
+    }
+  }
+);
+
+const candleSeries = chart.addCandlestickSeries({
+  upColor: '#0ecb81',
+  downColor: '#f6465d',
+  wickUpColor: '#0ecb81',
+  wickDownColor: '#f6465d'
+});
+
+const volumeSeries = chart.addHistogramSeries({
+  priceScaleId: '',
+  priceFormat: { type: 'volume' },
+  scaleMargins: { top: 0.8, bottom: 0 }
+});
+
+function startNewCandle(time) {
+  currentCandle = {
+    time,
+    open: price,
+    high: price,
+    low: price,
+    close: price,
+    buyUsd: 0,
+    sellUsd: 0
+  };
+}
+
+function recordTrade(orderUsd, side) {
+  const delta = orderUsd / LIQUIDITY;
+
+  if (side === 'BUY') {
+    balanceUSD -= orderUsd;
+    balanceBTC += orderUsd / price;
+    price += delta;
+    currentCandle.buyUsd += orderUsd;
+  } else {
+    balanceBTC -= orderUsd / price;
+    balanceUSD += orderUsd;
+    price -= delta;
+    currentCandle.sellUsd += orderUsd;
+  }
+
+  currentCandle.high = Math.max(currentCandle.high, price);
+  currentCandle.low  = Math.min(currentCandle.low, price);
+  currentCandle.close = price;
+}
+
+function updateCandle() {
+  candleSeries.update(currentCandle);
+
+  const netVolume =
+    currentCandle.buyUsd - currentCandle.sellUsd;
+
+  volumeSeries.update({
+    time: currentCandle.time,
+    value: netVolume,
+    color: netVolume >= 0 ? '#0ecb81' : '#f6465d'
+  });
+}
+
+function trade(side) {
+  const orderUsd = Number(amount.value);
+  if (!orderUsd || orderUsd <= 0) return;
+
+  const now = Math.floor(Date.now() / TIMEFRAME) * TIMEFRAME;
+
+  if (!lastCandleTime || now > lastCandleTime) {
+    startNewCandle(now / 1000);
+    lastCandleTime = now;
+  }
+
+  recordTrade(orderUsd, side);
+  updateCandle();
+  updateUI();
+}
+
+setInterval(() => {
+  const now = Math.floor(Date.now() / TIMEFRAME) * TIMEFRAME;
+  if (lastCandleTime && now > lastCandleTime) {
+    startNewCandle(now / 1000);
+    updateCandle();
+    lastCandleTime = now;
+  }
+}, TIMEFRAME);
+</script>
 
 </body>
 </html>
