--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ button {
 </div>
 
 <script>
-const TIMEFRAME = 1000;
+const TIMEFRAME = 60_000;
 const LIQUIDITY = 1_000_000;
 
 let balanceUSD = 100000;
