--- a/index.html
+++ b/index.html
@@ -1,71 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Exchange Simulator</title>
-
-<script src="https://cdn.jsdelivr.net/npm/lightweight-charts@4.1.1/dist/lightweight-charts.standalone.production.js"></script>
-
-<style>
-body {
-  margin: 0;
-  background: #0b0e11;
-  color: #eaecef;
-  font-family: Arial, sans-serif;
-}
-#chart {
-  width: 100%;
-  height: 420px;
-}
-#controls {
-  display: flex;
-  gap: 8px;
-  padding: 10px;
-  background: #0e1117;
-}
-input {
-  width: 120px;
-  padding: 6px;
-  background: #161a1e;
-  color: #eaecef;
-  border: 1px solid #2b3139;
-}
-button {
-  padding: 6px 14px;
-  font-weight: bold;
-  border: none;
-}
-.buy { background: #0ecb81; }
-.sell { background: #f6465d; }
-#stats {
-  padding: 10px;
-}
-</style>
+  <meta charset="UTF-8" />
+  <title>Crypto Candle Simulator</title>
+  <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
+  <style>
+    body {
+      background: #111;
+      color: #ddd;
+      font-family: Arial;
+    }
+    #chart {
+      height: 500px;
+    }
+    #controls {
+      margin-top: 10px;
+    }
+    input, button {
+      padding: 6px;
+      font-size: 14px;
+      margin-right: 5px;
+    }
+  </style>
 </head>
-
 <body>
 
+<h3>BTC/USD Simulator</h3>
 <div id="chart"></div>
 
 <div id="controls">
-  <input id="amount" type="number" value="1000">
-  <button class="buy" onclick="trade('BUY')">BUY</button>
-  <button class="sell" onclick="trade('SELL')">SELL</button>
+  <input id="amount" type="number" value="1000" />
+  <button onclick="trade('BUY')">BUY</button>
+  <button onclick="trade('SELL')">SELL</button>
 </div>
 
-<div id="stats">
+<p>
   USD: <span id="usd"></span> |
   BTC: <span id="btc"></span> |
   Price: <span id="price"></span>
-</div>
+</p>
 
 <script>
-/* ===== НАСТРОЙКИ ===== */
-const TIMEFRAME = 60_000;      // 1 минута
-const LIQUIDITY = 50_000;      // сделано наглядно
+/* ====== НАСТРОЙКИ ====== */
+const TIMEFRAME = 1000;        // 1 секунда
+const LIQUIDITY = 1_000_000;  // чем больше — тем меньше движение цены
 
-/* ===== СОСТОЯНИЕ ===== */
+/* ====== СОСТОЯНИЕ ====== */
 let balanceUSD = 100000;
 let balanceBTC = 0;
 let price = 30000;
@@ -73,47 +53,32 @@ let price = 30000;
 let currentCandle = null;
 let lastCandleTime = null;
 
-/* ===== UI ===== */
-const usdEl = document.getElementById('usd');
-const btcEl = document.getElementById('btc');
-const priceEl = document.getElementById('price');
-
-function updateUI() {
-  usdEl.textContent = balanceUSD.toFixed(2);
-  btcEl.textContent = balanceBTC.toFixed(6);
-  priceEl.textContent = price.toFixed(2);
-}
-updateUI();
-
-/* ===== ГРАФИК ===== */
+/* ====== ГРАФИК ====== */
 const chart = LightweightCharts.createChart(
   document.getElementById('chart'),
-  {
-    layout: {
-      background: { color: '#0b0e11' },
-      textColor: '#eaecef'
-    },
-    grid: {
-      vertLines: { color: '#0b0e11' },
-      horzLines: { color: '#0b0e11' }
-    },
-    rightPriceScale: {
-      borderColor: '#0b0e11'
-    },
-    timeScale: {
-      borderColor: '#0b0e11'
-    }
-  }
+  { background: { color: '#111' }, textColor: '#ccc' }
 );
 
-const candleSeries = chart.addCandlestickSeries({
-  upColor: '#0ecb81',
-  downColor: '#f6465d',
-  wickUpColor: '#0ecb81',
-  wickDownColor: '#f6465d'
+const candleSeries = chart.addCandlestickSeries();
+const volumeSeries = chart.addHistogramSeries({
+  priceScaleId: '',
+  priceFormat: { type: 'volume' },
+  scaleMargins: { top: 0.8, bottom: 0 }
 });
 
-/* ===== СВЕЧА ===== */
+/* ====== ОБНОВЛЕНИЕ БАЛАНСА ====== */
+function updateUI() {
+  usd.textContent = balanceUSD.toFixed(2);
+  btc.textContent = balanceBTC.toFixed(6);
+  priceEl.textContent = price.toFixed(2);
+}
+
+const usd = document.getElementById('usd');
+const btc = document.getElementById('btc');
+const priceEl = document.getElementById('price');
+updateUI();
+
+/* ====== НОВАЯ СВЕЧА ====== */
 function startNewCandle(time) {
   currentCandle = {
     time,
@@ -126,7 +91,7 @@ function startNewCandle(time) {
   };
 }
 
-/* ===== СДЕЛКА ===== */
+/* ====== ЗАПИСЬ СДЕЛКИ ====== */
 function recordTrade(orderUsd, side) {
   const delta = orderUsd / LIQUIDITY;
 
@@ -142,36 +107,58 @@ function recordTrade(orderUsd, side) {
     currentCandle.sellUsd += orderUsd;
   }
 
-  // ТЕЛО СВЕЧИ
+  currentCandle.high = Math.max(currentCandle.high, price);
+  currentCandle.low  = Math.min(currentCandle.low, price);
   currentCandle.close = price;
-
-  // ФИТИЛИ НЕ ОТ ТИКОВ
-  currentCandle.high = Math.max(currentCandle.open, currentCandle.close);
-  currentCandle.low  = Math.min(currentCandle.open, currentCandle.close);
 }
 
-/* ===== BUY / SELL ===== */
+/* ====== BUY / SELL ====== */
 function trade(side) {
   const orderUsd = Number(amount.value);
   if (!orderUsd || orderUsd <= 0) return;
 
   const now = Math.floor(Date.now() / TIMEFRAME) * TIMEFRAME;
 
-  if (!lastCandleTime) {
-    startNewCandle(now / 1000);
-    lastCandleTime = now;
-  }
-
-  if (now > lastCandleTime) {
-    candleSeries.update(currentCandle);
+  if (!lastCandleTime || now > lastCandleTime) {
+    if (currentCandle) closeCandle();
     startNewCandle(now / 1000);
     lastCandleTime = now;
   }
 
   recordTrade(orderUsd, side);
-  candleSeries.update(currentCandle);
+  updateCandle();
   updateUI();
 }
+
+/* ====== ОБНОВЛЕНИЕ СВЕЧИ ====== */
+function updateCandle() {
+  candleSeries.update(currentCandle);
+
+  const netVolume =
+    currentCandle.buyUsd - currentCandle.sellUsd;
+
+  volumeSeries.update({
+    time: currentCandle.time,
+    value: netVolume,
+    color: netVolume >= 0 ? 'green' : 'red'
+  });
+}
+
+/* ====== ЗАКРЫТИЕ СВЕЧИ ====== */
+function closeCandle() {
+  updateCandle();
+}
+
+/* ====== ПУСТЫЕ СВЕЧИ (КАК НА БИРЖЕ) ====== */
+setInterval(() => {
+  const now = Math.floor(Date.now() / TIMEFRAME) * TIMEFRAME;
+
+  if (lastCandleTime && now > lastCandleTime) {
+    startNewCandle(now / 1000);
+    updateCandle();
+    lastCandleTime = now;
+  }
+}, TIMEFRAME);
 </script>
 
 </body>
