--- a/index.html
+++ b/index.html
@@ -4,68 +4,64 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>BTC/USD Simulator (5s)</title>
+<title>BTC/USD Simulator + Net Volume (5s)</title>
 
 <script src="https://cdn.jsdelivr.net/npm/lightweight-charts@4.1.0/dist/lightweight-charts.standalone.production.js"></script>
 
 <style>
-  body {
-    margin: 0;
-    background: #111;
-    color: #ddd;
-    font-family: Arial, sans-serif;
-    text-align: center;
-  }
+body{
+  margin:0;
+  background:#111;
+  color:#ddd;
+  font-family:Arial,sans-serif;
+  text-align:center;
+}
+h3{margin:14px 0}
 
-  h3 {
-    margin: 14px 0;
-  }
+#chart{
+  width:100%;
+  height:560px;
+}
 
-  #chart {
-    width: 100%;
-    height: 420px;
-    min-height: 420px;
-  }
+#controls{
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  gap:14px;
+  margin:16px 0;
+}
 
-  #controls {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 14px;
-    margin: 16px 0;
-  }
+#amount{
+  width:120px;
+  padding:12px;
+  font-size:20px;
+  text-align:center;
+  border-radius:8px;
+  border:none;
+}
 
-  #amount {
-    width: 120px;
-    padding: 12px;
-    font-size: 20px;
-    text-align: center;
-    border-radius: 8px;
-    border: none;
-  }
+button{
+  padding:14px 26px;
+  font-size:22px;
+  font-weight:bold;
+  border:none;
+  border-radius:10px;
+  cursor:pointer;
+}
 
-  button {
-    padding: 14px 26px;
-    font-size: 22px;
-    font-weight: bold;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-  }
+.buy{background:#1faa59;color:#fff}
+.sell{background:#d64545;color:#fff}
 
-  .buy { background:#1faa59; color:#fff }
-  .sell { background:#d64545; color:#fff }
-
-  #stats {
-    font-size: 16px;
-    margin-bottom: 12px;
-  }
+#stats{
+  font-size:16px;
+  margin-bottom:12px;
+}
 </style>
 </head>
 
 <body>
 
-<h3>BTC/USD Simulator (5s)</h3>
+<h3>BTC/USD Simulator (5s) + Net Volume</h3>
 
 <div id="chart"></div>
 
@@ -82,11 +78,11 @@
 </div>
 
 <script>
-/* ===== НАСТРОЙКИ ===== */
+/* ===== SETTINGS ===== */
 const TIMEFRAME = 5000;
 const LIQUIDITY = 1_000_000;
 
-/* ===== СОСТОЯНИЕ ===== */
+/* ===== STATE ===== */
 let balanceUSD = 100000;
 let balanceBTC = 0;
 let price = 30000;
@@ -94,25 +90,37 @@ let lastPrice = price;
 
 let currentCandle = null;
 let lastCandleTime = null;
+let currentNetVolume = 0;
 
-/* ===== ГРАФИК ===== */
+/* ===== CHART ===== */
 const chartEl = document.getElementById('chart');
 
-const chart = LightweightCharts.createChart(chartEl, {
-  width: chartEl.clientWidth,
-  height: 420,
-  layout: { background: { color:'#111' }, textColor:'#ccc' },
-  grid: { vertLines:{color:'#222'}, horzLines:{color:'#222'} }
+const chart = LightweightCharts.createChart(chartEl,{
+  width:chartEl.clientWidth,
+  height:560,
+  layout:{background:{color:'#111'},textColor:'#ccc'},
+  grid:{vertLines:{color:'#222'},horzLines:{color:'#222'}},
+  rightPriceScale:{visible:false}
 });
 
-const candleSeries = chart.addCandlestickSeries();
+const candleSeries = chart.addCandlestickSeries({
+  upColor:'#1faa59',
+  downColor:'#d64545',
+  borderUpColor:'#1faa59',
+  borderDownColor:'#d64545',
+  wickUpColor:'#1faa59',
+  wickDownColor:'#d64545'
+});
 
-setTimeout(() => {
-  chart.applyOptions({ width: chartEl.clientWidth, height: 420 });
-}, 100);
+const volumeSeries = chart.addHistogramSeries({
+  base:0,
+  priceFormat:{type:'volume'},
+  priceScaleId:'',
+  scaleMargins:{top:0.75,bottom:0}
+});
 
-window.addEventListener('resize', () => {
-  chart.applyOptions({ width: chartEl.clientWidth });
+window.addEventListener('resize',()=>{
+  chart.applyOptions({width:chartEl.clientWidth});
 });
 
 /* ===== UI ===== */
@@ -120,89 +128,98 @@ const usdEl = document.getElementById('usd');
 const btcEl = document.getElementById('btc');
 const priceEl = document.getElementById('price');
 
-function updateUI() {
+function updateUI(){
   usdEl.textContent = balanceUSD.toFixed(2);
   btcEl.textContent = balanceBTC.toFixed(6);
   priceEl.textContent = price.toFixed(2);
 }
 
-/* ===== СВЕЧИ ===== */
-function startNewCandle(time) {
+/* ===== CANDLES ===== */
+function startNewCandle(time){
+  currentNetVolume = 0;
   currentCandle = {
     time,
-    open: price,
-    high: price,
-    low: price,
-    close: price
+    open:price,
+    high:price,
+    low:price,
+    close:price
   };
 }
 
-function ensureCandle() {
-  const now = Math.floor(Date.now() / TIMEFRAME) * TIMEFRAME;
-  if (!lastCandleTime || now > lastCandleTime) {
-    startNewCandle(now / 1000);
+function ensureCandle(){
+  const now = Math.floor(Date.now()/TIMEFRAME)*TIMEFRAME;
+  if(!lastCandleTime || now>lastCandleTime){
+    startNewCandle(now/1000);
     lastCandleTime = now;
   }
 }
 
-function updateCandle() {
-  if (!currentCandle) return;
-  candleSeries.update(currentCandle);
+function updateCandle(){
+  if(currentCandle) candleSeries.update(currentCandle);
 }
 
-/* ===== СДЕЛКИ ===== */
-function recordTrade(orderUsd, side) {
-  if (!currentCandle) return;
+/* ===== TRADES ===== */
+function recordTrade(orderUsd,side){
+  if(!currentCandle) return;
+
   const delta = orderUsd / LIQUIDITY;
 
-  if (side === 'BUY') {
-    if (balanceUSD < orderUsd) return;
+  if(side==='BUY'){
+    if(balanceUSD < orderUsd) return;
     balanceUSD -= orderUsd;
     balanceBTC += orderUsd / price;
     price += delta;
-  } else {
+    currentNetVolume += orderUsd;
+  }else{
     const btcAmount = orderUsd / price;
-    if (balanceBTC < btcAmount) return;
+    if(balanceBTC < btcAmount) return;
     balanceBTC -= btcAmount;
     balanceUSD += orderUsd;
     price -= delta;
+    currentNetVolume -= orderUsd;
   }
 
-  currentCandle.high = Math.max(currentCandle.high, price);
-  currentCandle.low  = Math.min(currentCandle.low, price);
+  currentCandle.high = Math.max(currentCandle.high,price);
+  currentCandle.low  = Math.min(currentCandle.low,price);
   currentCandle.close = price;
+
+  volumeSeries.update({
+    time:currentCandle.time,
+    value:currentNetVolume,
+    color:currentNetVolume>=0?'#1faa59':'#d64545'
+  });
 }
 
-/* ===== РУЧНАЯ ТОРГОВЛЯ ===== */
-function trade(side) {
+/* ===== MANUAL ===== */
+function trade(side){
   const orderUsd = Number(amount.value);
-  if (!orderUsd || orderUsd <= 0) return;
+  if(!orderUsd || orderUsd<=0) return;
   ensureCandle();
-  recordTrade(orderUsd, side);
+  recordTrade(orderUsd,side);
   updateCandle();
   updateUI();
 }
 
-/* ===== ТОЛПА ===== */
-function randomCrowd() {
-  if (Math.random() > 0.6) return;
-  recordTrade(50 + Math.random()*300, Math.random()>0.5?'BUY':'SELL');
+/* ===== CROWD ===== */
+function randomCrowd(){
+  if(Math.random()>0.6) return;
+  recordTrade(50+Math.random()*300,Math.random()>0.5?'BUY':'SELL');
 }
 
-function reactiveCrowd() {
-  const d = price - lastPrice;
-  if (Math.abs(d) < 5) return;
-  recordTrade(200 + Math.random()*800, d>0?'BUY':'SELL');
+function reactiveCrowd(){
+  const d = price-lastPrice;
+  if(Math.abs(d)<5) return;
+  recordTrade(200+Math.random()*800,d>0?'BUY':'SELL');
 }
 
-function momentumCrowd() {
-  const body = currentCandle.close - currentCandle.open;
-  if (Math.abs(body) < 10) return;
-  recordTrade(500 + Math.random()*1500, body>0?'BUY':'SELL');
+function momentumCrowd(){
+  const body = currentCandle.close-currentCandle.open;
+  if(Math.abs(body)<10) return;
+  recordTrade(500+Math.random()*1500,body>0?'BUY':'SELL');
 }
 
-/* ===== РЫНОК ===== */
-function marketTick() {
+/* ===== MARKET ===== */
+function marketTick(){
   ensureCandle();
   randomCrowd();
   reactiveCrowd();
@@ -212,14 +229,14 @@ function marketTick() {
   lastPrice = price;
 }
 
-/* ===== СТАРТ ===== */
-const startTime = Math.floor(Date.now() / TIMEFRAME) * TIMEFRAME;
-startNewCandle(startTime / 1000);
+/* ===== START ===== */
+const startTime = Math.floor(Date.now()/TIMEFRAME)*TIMEFRAME;
+startNewCandle(startTime/1000);
 lastCandleTime = startTime;
 updateCandle();
 updateUI();
 
-setInterval(marketTick, 300);
+setInterval(marketTick,300);
 </script>
 
 </body>
